--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -53,7 +53,7 @@ body
 a
   color: $light-text
   text-decoration: underline
-  
+
 h4
   font-size: 20px
   font-weight: 300
@@ -74,8 +74,10 @@ p
   height: 65px
   display: block
   width: 100%
+  max-width: 400px
   padding: 0
-  margin: 0
+  margin: 0 auto
+  cursor: pointer
 
 .button:active
   background-color: $light !important
@@ -96,6 +98,31 @@ p
 .button-accent:focus
   @extend .button-accent:active
   outline: none
+
+.fields
+  width: 87%
+  max-width: 400px
+  margin: 0 auto
+
+input
+  background-color: $light
+  border: none
+  border-bottom: 2px solid $accent
+  display: block
+  margin: 2rem auto 0 auto
+  padding: 6px
+  width: 100%
+  font: 28px $font
+  font-weight: 400
+
+label
+  width: 100%
+  padding: 0 3px
+  text-align: left
+  text-transform: uppercase
+  font-size: 14px
+  letter-spacing: .12em
+
 
 // Utility classes
 
