--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -47,6 +47,12 @@ body
     width: 100%
     padding: 3px 5px
 
+// Menu
+
+.view-title
+  font-size: 34px
+  color: $accent
+  margin: -8px 7px
 
 // Typography
 
