--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -165,6 +165,21 @@ label
   font-size: 14px
   letter-spacing: .12em
 
+label.footnote
+  font-size: 12px
+  text-transform: none
+  letter-spacing: 0
+  font-style: italic
+  color: $light
+  line-height: 16px
+
+label.validation-error
+  @extend label.footnote
+  color: $accent
+  font-style: normal
+  text-align: center
+  padding: 0
+  margin: 0
 
 // Utility classes
 
