Create workout view layout

--- a/src/styles/_lists.sass
+++ b/src/styles/_lists.sass
@@ -1,5 +1,28 @@
 // Lists
 
+.list-header
+  background-color: $light
+  color: $dark
+  font-weight: 400
+  text-transform: uppercase
+  height: 50px
+
+  div
+    height: 50px
+    display: flex
+    align-items: center
+
+.list-header-middle
+  justify-content: center !important
+
+.list-header-right
+  justify-content: flex-end !important
+  margin-right: 16px
+
+.list-header-icon
+  width: 32px
+  margin-left: 10px
+
 .big-list-item
   border-top: 1px solid $darkest
 
