--- a/src/styles/_menu.sass
+++ b/src/styles/_menu.sass
@@ -3,6 +3,7 @@
 nav
   background-color: $darkest !important
   padding: 0 !important
+  height: 60px
 
 .logo
   margin: 15px auto
@@ -19,6 +20,7 @@ nav
     border-top: 1px solid $accent
     text-decoration: none
     font-size: 22px
+    background-color: $darkest
 
 .menu-icon
   color: $light
