Create workout list

--- a/src/styles/_lists.sass
+++ b/src/styles/_lists.sass
@@ -30,12 +30,22 @@
 .after-fixed-list-header
     padding-top: 50px
 
+.big-list
+  min-height: 100vh // Necessary for infinite scrolling to load data
+
 .big-list-item
   border-top: 1px solid $darkest
 
   h5
     color: $light
     padding-left: 20px
+    margin: 0
+
+.list-msg
+  text-align: center
+  font-style: italic
+  padding-top: 20px
+  padding-bottom: 20px
 
 .nav-icon
   color: $darkest
