--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -31,7 +31,6 @@ body
 
 .fortius-view
   padding: 0
-  min-height: 100vh
 
   .content
     background-color: $dark
@@ -53,3 +52,9 @@ body
 
 .center
   text-align: center
+
+// Bootstrap modifications
+
+.row
+  width: 100vw !important
+  margin: 0 !important
